{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 40,
  "lineage": "1f0f4f24-aa0c-b11e-7815-80046914f1c3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "eigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eigw-0ac9b7f96e00c144c",
            "tags": {
              "Name": "ccs6344-eigw"
            },
            "tags_all": {
              "Name": "ccs6344-eigw"
            },
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03a520e604e3470d3",
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:instance/i-0843ac2e343d97e15",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-5a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0843ac2e343d97e15",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da10:8202:a100:781d:e26e:7f7c:d0aa"
            ],
            "key_name": "ccs6344-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00c248c8cdd41ffaf",
            "private_dns": "ip-10-10-1-77.ap-southeast-5.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.77",
            "public_dns": "ec2-43-217-2-79.ap-southeast-5.compute.amazonaws.com",
            "public_ip": "43.217.2.79",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0c8186133a3065514",
                "volume_size": 2,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07305841a250c5aa8",
            "tags": {
              "Name": "ccs6344-app"
            },
            "tags_all": {
              "Name": "ccs6344-app"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d1bc3b1e5131778b"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amazon_linux"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-024cf537d418c7c2f",
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:instance/i-0537ca3b151ab4089",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-5a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0537ca3b151ab4089",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 1,
            "ipv6_addresses": [
              "2406:da10:8202:a100:8dad:8686:17fe:8211"
            ],
            "key_name": "ccs6344-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-09d4db5a995b97cf1",
            "private_dns": "ip-10-10-1-134.ap-southeast-5.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.1.134",
            "public_dns": "ec2-43-216-113-16.ap-southeast-5.compute.amazonaws.com",
            "public_ip": "43.216.113.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-000727ab720c35fd9",
                "volume_size": 30,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07305841a250c5aa8",
            "tags": {
              "Name": "ccs6344-mssql-db"
            },
            "tags_all": {
              "Name": "ccs6344-mssql-db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0e2e1697fd06575d0"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.db_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.windows"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:internet-gateway/igw-0ca036bfa5c5147cc",
            "id": "igw-0ca036bfa5c5147cc",
            "owner_id": "122492860390",
            "tags": {
              "Name": "ccs6344-igw"
            },
            "tags_all": {
              "Name": "ccs6344-igw"
            },
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-0ac9b7f96e00c144c",
            "gateway_id": "",
            "id": "r-rtb-0dcb1eb760533de612750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dcb1eb760533de61",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_egress_only_internet_gateway.eigw",
            "aws_route_table.private_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ipv4_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca036bfa5c5147cc",
            "id": "r-rtb-0dfe4b5aff5f3987b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dfe4b5aff5f3987b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_ipv6_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0ca036bfa5c5147cc",
            "id": "r-rtb-0dfe4b5aff5f3987b2750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0dfe4b5aff5f3987b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:route-table/rtb-0dcb1eb760533de61",
            "id": "rtb-0dcb1eb760533de61",
            "owner_id": "122492860390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "eigw-0ac9b7f96e00c144c",
                "gateway_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ccs6344-private-rt"
            },
            "tags_all": {
              "Name": "ccs6344-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:route-table/rtb-0dfe4b5aff5f3987b",
            "id": "rtb-0dfe4b5aff5f3987b",
            "owner_id": "122492860390",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca036bfa5c5147cc",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ca036bfa5c5147cc",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "ccs6344-public-rt"
            },
            "tags_all": {
              "Name": "ccs6344-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-085f4ecd65dad7c00",
            "route_table_id": "rtb-0dcb1eb760533de61",
            "subnet_id": "subnet-0bcabc802e9041c8b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.private_rt",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e1e58ad870cba47",
            "route_table_id": "rtb-0dfe4b5aff5f3987b",
            "subnet_id": "subnet-07305841a250c5aa8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "app_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:security-group/sg-0d1bc3b1e5131778b",
            "description": "Allow HTTP/HTTPS; SSH only from my IP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d1bc3b1e5131778b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "60.50.34.86/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ccs6344-app-sg",
            "name_prefix": "",
            "owner_id": "122492860390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ccs6344-app-sg"
            },
            "tags_all": {
              "Name": "ccs6344-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:security-group/sg-0e2e1697fd06575d0",
            "description": "DB only from app SG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e2e1697fd06575d0",
            "ingress": [
              {
                "cidr_blocks": [
                  "60.50.34.86/32"
                ],
                "description": "",
                "from_port": 3389,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3389
              }
            ],
            "name": "ccs6344-db-sg",
            "name_prefix": "",
            "owner_id": "122492860390",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ccs6344-db-sg"
            },
            "tags_all": {
              "Name": "ccs6344-db-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:subnet/subnet-0bcabc802e9041c8b",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-5c",
            "availability_zone_id": "apse5-az3",
            "cidr_block": "10.10.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bcabc802e9041c8b",
            "ipv6_cidr_block": "2406:da10:8202:a101::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-05180c946d8160013",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "122492860390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ccs6344-private-subnet"
            },
            "tags_all": {
              "Name": "ccs6344-private-subnet"
            },
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:subnet/subnet-07305841a250c5aa8",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "ap-southeast-5a",
            "availability_zone_id": "apse5-az1",
            "cidr_block": "10.10.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07305841a250c5aa8",
            "ipv6_cidr_block": "2406:da10:8202:a100::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-03df1b48e8cfe88f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "122492860390",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "ccs6344-public-subnet"
            },
            "tags_all": {
              "Name": "ccs6344-public-subnet"
            },
            "vpc_id": "vpc-0ddf51244d8d8fd45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:vpc/vpc-0ddf51244d8d8fd45",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0a5576b0f59a76f86",
            "default_route_table_id": "rtb-0c86ae1207030ac16",
            "default_security_group_id": "sg-0faa0367317c82c91",
            "dhcp_options_id": "dopt-0b0900335c347ac3a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ddf51244d8d8fd45",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-060a6ca1cc5efa221",
            "ipv6_cidr_block": "2406:da10:8202:a100::/56",
            "ipv6_cidr_block_network_border_group": "ap-southeast-5",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c86ae1207030ac16",
            "owner_id": "122492860390",
            "tags": {
              "Name": "ccs6344-vpc"
            },
            "tags_all": {
              "Name": "ccs6344-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "db_mssql_from_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-5:122492860390:security-group-rule/sgr-0f2dd87cdba5356a5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": null,
            "from_port": 1433,
            "id": "sgr-0f2dd87cdba5356a5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d1bc3b1e5131778b",
            "security_group_id": "sg-0e2e1697fd06575d0",
            "security_group_rule_id": "sgr-0f2dd87cdba5356a5",
            "tags": null,
            "tags_all": {},
            "to_port": 1433
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.app_sg",
            "aws_security_group.db_sg",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}